stable-frontend/deploy/deployment-config.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: frontend
  namespace: 2482569sproject
spec:
  replicas: 1
  strategy:
    resources: {}
  template:
    metadata:
      labels:
        app: frontend
        deploymentconfig: frontend
    spec:
      containers:
        - name: frontend
          image: chooboo/stable-frontend:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: '1000m'
              memory: '2048Mi'
