stable-frontend/deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: 2482569sproject
spec:
  selector:
    app: frontend
  ports:
    - name: frontend-port
      port: 8080
      protocol: TCP
      targetPort: 8080
