stable-frontend/deploy/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-route
  namespace: 2482569sproject
spec:
  host: stable-diffusion.ida.dcs.gla.ac.uk
  path: /
  to:
    kind: Service
    name: frontend-service
  port:
    targetPort: 8080
